fix: Somestyles fixed Alignated correctly to be reusable

--- a/src/styles/aboutme.css
+++ b/src/styles/aboutme.css
@@ -2,7 +2,6 @@
     background-color: #f2f2f2;
     height: 55vh;
     width: 100%;
-    margin-left: 20%;
     border-top: 1px solid #ccc;
 }
 
