--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -2,7 +2,6 @@
     height: 55vh;
     width: 100%;
     margin-top: 10%;
-    margin-left: 20%;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
