--- a/src/styles/featuredtoday.css
+++ b/src/styles/featuredtoday.css
@@ -1,7 +1,6 @@
 .ft-container{
     height: 55vh;
     width: 100%;
-    margin-left: 20%;
     margin-top: 10%;
     border-top: 1px solid #ccc;
 }
