--- a/src/styles/homescreen.css
+++ b/src/styles/homescreen.css
@@ -5,6 +5,8 @@ article{
     margin-top: 50px;
 }
 
+
 .hs-extrainfo{
-    margin-right: 5%;
+    width: 100%;
+    margin-left: 5%;
 }
