--- a/src/styles/lifestyle.css
+++ b/src/styles/lifestyle.css
@@ -2,12 +2,14 @@
     margin-left: 10%;
     margin-right: 10%;
     display: inline-flex;
+    background-color: red;
 }
 
 .ls-main-section{
     display: flex;
     flex-direction: column;
     width: 75%;
+    background-color: black;
 }
 
 .ls-title{
@@ -40,6 +42,7 @@
     flex-direction: column;
     width: 25%;
     margin-top: 5%;
+    background-color: aqua;
 }
 
 .ls-social{
