--- a/src/styles/popularpost.css
+++ b/src/styles/popularpost.css
@@ -1,8 +1,6 @@
 .pp-container{
     height: 20vh;
     width: 100%;
-    margin-left: 20%;
-    margin-top: 20%;
     border-top: 1px solid #ccc;
 }
 
